# todo

./: .gitignore  Cargo.toml  flake.nix
src/: cli.rs  main.rs  schema.sql  tag.rs  task.rs
tests/: add_tasks.rs  start_main.rs
