[package]
name = "todo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
assert_cmd = "2.0.16"
clap = { version = "4.5.16", features = ["derive"] }
comfy-table = "7.1.1"
sqlx = { version = "0.8.1", features = ["sqlite", "runtime-tokio", "chrono", "macros" ] }
tokio = { version = "1.40.0", features = ["full"] }
